feat: 完善搜索功能和私信功能
搜索功能增强：
- 后端：BlogTagController 添加标签搜索接口 GET /tag/search
- 后端：TopicController 添加话题搜索接口 GET /topic/search
- 后端：CirclePostMapper 修复 JSON 查询（使用 CONCAT 正确匹配整数数组）
- 后端：CircleServiceImpl 修复 getPostsByTopic JSON 查询
- 前端：Search.vue 支持校友圈、标签、话题过滤器，聚合搜索全部类型
- 前端：新增 TagDetail.vue 标签详情页
- 前端：新增 TopicDetail.vue 话题详情页
- 前端：tag.js 添加 searchTags 接口
- 前端：topic.js 添加 searchTopics 接口

私信功能修复：
- 后端：MessageServiceImpl 添加空内容校验
- 前端：Messages.vue 修复 API 参数错误（使用 user.id 替代 conversationId）
- 前端：Messages.vue 缩短轮询间隔 30s → 10s
- 前端：Notifications.vue 修复私信通知跳转丢失 userId

JSON 查询修复说明：
- MySQL JSON 整数数组 [123, 456] 不能用 JSON_CONTAINS 直接匹配
- 改用 JSON_SEARCH + CONCAT('\"', #{id}, '\"') 正确构建字符串匹配

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>